# reconhecimento_imagens

./: .gitignore  README.md  app.sh  pyproject.toml  setup.py
scripts/: recognition.py
video_apresentacao/: video.mp4:Zone.Identifier
