[project]
name = "BlacklistX"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "face-recognition-models>=0.3.0",
    "face-recognition>=1.3.0",
    "ipykernel>=6.29.5",
    "opencv-python>=4.10.0.84",
    "psycopg2-binary>=2.9.10",
    "fastapi",
    "cmake>=4.0.2",
    "dlib>=19.24.6",
]
